--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.force66</groupId>
 	<artifactId>ServletApiMock</artifactId>
-	<version>1.0.0-Beta</version>
+	<version>1.0.0-Beta2</version>
 	<name>ServletApiMock</name>
 
 	<properties>
